--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -26,6 +26,20 @@
     font-size: 10px;
 }
 
-.message:hover {
+.message-text {
+    cursor: pointer;
+    transition: .3s ease-in-out;
+}
 
+.message-text:hover {
+    opacity: 0.35;
+}
+
+.reverse {
+    transform: scale(-1, 1);
+    -moz-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -ms-transform: scale(-1, 1);
+    transform: scale(-1, 1);
 }
