--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -2,6 +2,9 @@
     display: flex;
     width: 100%;
     gap: .3em;
+    border-radius: 0.2rem;
+
+    transition: background-color 0.5s ease;
 }
 
 .message.message_right {
