--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -6,9 +6,14 @@
 
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 2px;
 }
 
 .ant-skeleton-avatar-square {
     border-radius: 0.2rem;
+}
+
+.highlight {
+    background-color: rgba(255, 255, 0, 0.57);
+    transition: background-color 0.5s ease;
 }
