--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -3,8 +3,6 @@
     width: 100%;
     gap: .3em;
     border-radius: 0.2rem;
-
-    transition: background-color 0.5s ease;
 }
 
 .message.message_right {
@@ -27,6 +25,11 @@
 
 .message-time {
     font-size: 10px;
+}
+
+.message-body {
+    max-width: 65%;
+    transition: background-color 0.5s ease;
 }
 
 .message-text {
